user profile with address

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -253,7 +253,8 @@
                                 <input type="text" placeholder="Search for items...">
                             </form>
                         </div>
-                        <!-- <div class="header-action-right">
+                        <% if(user){ %>
+                        <div class="header-action-right">
                             <div class="header-action-2">
                                 <div class="header-action-icon-2">
                                     <a href="shop-wishlist.html">
@@ -266,7 +267,7 @@
                                         <img alt="Evara" src="/assets/imgs/theme/icons/icon-cart.svg">
                                         <span class="pro-count blue">2</span>
                                     </a>
-                                    <div class="cart-dropdown-wrap cart-dropdown-hm2">
+                                    <!-- <div class="cart-dropdown-wrap cart-dropdown-hm2">
                                         <ul>
                                             <li>
                                                 <div class="shopping-cart-img">
@@ -302,10 +303,18 @@
                                                 <a href="shop-checkout.html">Checkout</a>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
+                                <div class="header-action-2">
+                                    <div class="header-action-icon-2">
+                                        <a href="/gadgetly/myaccount">
+                                            <img class="svgInject" alt="Evara" src="/assets/imgs/theme/icons/icon-profile.svg">
+                                            <span class="pro-count blue">4</span>
+                                        </a>
+                                    </div>
                             </div>
-                        </div> -->
+                        </div>
+                        <% }else{}  %>
                     </div>
                 </div>
             </div>
