--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -211,7 +211,8 @@
                             <form method="post" action="/gadgetly/admin/edit?id=<%= product._id %>" enctype="multipart/form-data">
                                 <div class="mb-4">
                                     <label for="product_name" class="form-label">Product title</label>
-                                    <input type="text" placeholder="Type here" class="form-control" id="product_name" name="product_name" value="<%=product.productName %>">
+                                    <input type="text" placeholder="Type here" class="form-control" id="product_name" name="product_name" value="<%=product.productName %>" oninput="validateProductName()">
+                                    <span id="errorProductName" class="text-danger"></span>
                                 </div>
                                 <div class="mb-4">
                                     <label class="form-label">Full description</label>
@@ -222,14 +223,16 @@
                                         <div class="mb-4">
                                             <label class="form-label">Regular price</label>
                                             <div class="row gx-2">
-                                                <input placeholder="$" type="text" class="form-control" name="product_price"  value="<%=product.productPrice %>">
+                                                <input placeholder="$" type="text" class="form-control" id="product_price" name="product_price"  value="<%=product.productPrice %>" oninput="validateProductPrice()">
+                                                <span id="errorProductPrice" class="text-danger"></span>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-lg-4">
                                         <div class="mb-4">
                                             <label class="form-label">Promotional price</label>
-                                            <input placeholder="$" type="text" class="form-control" name="product_sprice"  value="<%=product.salePrice%>">
+                                            <input placeholder="$" type="text" class="form-control" id="product_sprice" name="product_sprice"  value="<%=product.salePrice%>" oninput="validateProductSprice()">
+                                            <span id="errorProductSprice" class="text-danger"></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4">
@@ -249,7 +252,8 @@
                                 </div>
                                 <div class="mb-4">
                                     <label class="form-label">Stock</label>
-                                    <input type="text" placeholder="%" class="form-control" id="product_name" name="product_stock"  value="<%=product.Stock %>">
+                                    <input type="text" placeholder="%" class="form-control" id="product_stock" name="product_stock"  value="<%=product.Stock %>"  oninput="validateProductStock()">
+                                    <span id="errorProductStock" class="text-danger"></span>
                                 </div>
                                 
                                 <div class="left">
@@ -261,13 +265,14 @@
                                 </div>
                                 <div class="input-upload">
                                     <img src="/admin-assets/imgs/theme/upload.svg" alt="" >
-                                    <input class="form-control" type="file" name="image" multiple accept="image/*">
-                                </div>
+                                    <input class="form-control" type="file" name="image" multiple accept="image/*" id="image" oninput="validateProductImage()">
+                                    <span id="errorProductImage" class="text-danger"></span>
+                                <!-- </div>
                                 <label class="form-check mb-4">
                                     <input class="form-check-input" type="checkbox" value="">
                                     <span class="form-check-label"> Make a template </span>
                                 </label>
-                                <div>
+                                <div> -->
                                     <button type="submit" class="btn btn-md rounded font-sm hover-up" name="submit">Publish</button>
                                 </div>
                             </form>
@@ -389,6 +394,61 @@
     <script src="/admin-assets/js/vendors/jquery.fullscreen.min.js"></script>
     <!-- Main Script -->
     <script src="/admin-assets/js/main.js" type="text/javascript"></script>
+    <script>
+        function validateProductName(){
+            var productname = document.getElementById('product_name').value;
+            var errorProductName = document.getElementById('errorProductName');
+            errorProductName.innerHTML = ""
+
+            if(productname.trim() === ""){
+                errorProductName.innerHTML = "product name required"
+            }else if(productname.length<3 || productname.length>15){
+                errorProductName.innerHTML = "product name must be between 3 and 15 characters"
+            }
+        }
+
+        function validateProductPrice(){
+            var productPrice =  document.getElementById('product_price').value;
+            var errorProductPrice = document.getElementById('errorProductPrice');
+            errorProductPrice.innerHTML = ""
+
+            if(productPrice.trim() === ""){
+                errorProductPrice.innerHTML = "product price required"
+            }
+
+        }
+
+        function validateProductSprice(){
+            var productsprice = document.getElementById('product_sprice').value;
+            var errorProductSprice = document.getElementById('errorProductSprice');
+            errorProductSprice.innerHTML = ""
+
+            if(productsprice.trim() === ""){
+                errorProductSprice.innerHTML = "product sale price required"
+            }
+        }
+
+        function validateProductStock(){
+            var productStock = document.getElementById('product_stock').value;
+            var errorProductStock = document.getElementById('errorProductStock');
+            errorProductStock.innerHTML = ""
+
+
+            if(productStock.trim() === ""){
+                errorProductStock.innerHTML = "product stock required"
+            }
+        }
+
+        function validateProductImage(){
+            var productImage = document.getElementById('image').value;
+            var errorProductImage = document.getElementById('errorProductImage');
+            errorProductImage.innerHTML = ""
+
+            if(productImage.trim() === ""){
+                errorProductImage.innerHTML = "product image required"
+            }
+        }
+    </script>
 </body>
 
 
