--- a/views/admin/categories.ejs
+++ b/views/admin/categories.ejs
@@ -205,12 +205,17 @@
                         <div class="col-md-3">
                             <form method="post" action="/gadgetly/admin/createcategory">
                                 <div class="mb-4">
-                                    <label for="product_name" class="form-label">Name</label>
-                                    <input type="text" placeholder="Type here" class="form-control" id="product_name" name="category_name" />
+                                    <label for="category_name" class="form-label">Name</label>
+                                    <input type="text" placeholder="Type here" class="form-control" id="category_name" name="category_name" oninput="validateCategoryName()" />
+                                    <span id="errorCategoryName" class="text-danger"></span>
+                                    <% if(typeof message != "undefined"){ %>
+                                        <span class="text-danger"><%= message %></span>
+                                    <% } %>
                                 </div>
                                 <div class="mb-4">
-                                    <label for="product_slug" class="form-label">Slug</label>
-                                    <input type="text" placeholder="Type here" class="form-control" id="product_slug"  name="category_slug"/>
+                                    <label for="category_slug" class="form-label">Slug</label>
+                                    <input type="text" placeholder="Type here" class="form-control" id="category_slug"  name="category_slug" oninput="validateCategorySlug()"/>
+                                    <span id="errorCategorySlug" class="text-danger"></span>
                                 </div>
                                 <div class="mb-4">
                                     <label class="form-label">Parent</label>
@@ -490,6 +495,31 @@
     <script src="/admin-assets/js/vendors/jquery.fullscreen.min.js"></script>
     <!-- Main Script -->
     <script src="/admin-assets/js/main.js" type="text/javascript"></script>
+    <script>
+        function validateCategoryName(){
+            var categoryName = document.getElementById('category_name').value;
+            var errorCategoryName = document.getElementById('errorCategoryName');
+            errorCategoryName.innerText = "";
+
+            if(categoryName.trim() === ""){
+                errorCategoryName.innerHTML = "category name required"
+            }else if(categoryName.length<3 || categoryName.length>10){
+                errorCategoryName.innerHTML = "category name must be 3 to 10 characters"
+            }else{
+                errorCategoryName.innerHTML = ""
+            }
+        }
+
+        function validateCategorySlug(){
+            var categorySlug = document.getElementById('category_slug').value;
+            var errorCategorySlug = document.getElementById('errorCategorySlug');
+            errorCategorySlug.innerHTML = "";
+
+            if(categorySlug.trim() === ""){
+                errorCategorySlug.innerHTML = "category slug required"
+            }
+        }
+    </script>
 </body>
 
 
