--- a/views/admin/productList.ejs
+++ b/views/admin/productList.ejs
@@ -267,7 +267,7 @@
                                                     <i class="material-icons md-delete_forever"></i> List
                                                 </a>
                                             <% }else{ %>
-                                                <a href="/gadgetly/admin/unlist?id=<%=product[i]._id %>" class="btn btn-sm font-sm btn-light rounded" style="background-color: red;">
+                                                <a href="/gadgetly/admin/unlist?id=<%=product[i]._id %>"  class="btn btn-sm font-sm btn-light rounded" style="background-color: red;">
                                                     <i class="material-icons md-delete_forever"></i> Unlist
                                                 </a>
                                            <% } %>
@@ -625,6 +625,24 @@
     <script src="/admin-assets/js/vendors/jquery.fullscreen.min.js"></script>
     <!-- Main Script -->
     <script src="/admin-assets/js/main.js" type="text/javascript"></script>
+    <!-- <script>
+        function updateProductStatus(productId,action){
+            fetch(`/gadgetly/admin/${action}/?id=${productId}`,{
+                method:'GET',
+                headers:{
+                    'Content-Type': 'application/json',
+
+                },
+
+            }).then(res => res.json())
+            .then(data=> {
+                console.log("actin successful")
+            })
+            .catch(error=>{
+                console.error(error.message)
+            })
+        }
+    </script> -->
 </body>
 
 
