--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -630,19 +630,22 @@
                                                     <div class="row">
                                                         <div class="form-group col-md-12">
                                                             <label>USername <span class="required">*</span></label>
-                                                            <input required="" class="form-control square" name="name" type="text" value="<%= user.name %>">
+                                                            <input required="true" class="form-control square"  id="username" name="name" type="text" value="<%= user.name %>" oninput="validateUsername()">
+                                                            <span id="errorusername" class="text-danger"></span>
                                                         </div>
                                                         <!-- <div class="form-group col-md-6">
                                                             <label>Last Name <span class="required">*</span></label>
                                                             <input required="" class="form-control square" name="phone">
                                                         </div> -->
                                                         <div class="form-group col-md-12">
-                                                            <label>Mpbile Number <span class="required">*</span></label>
-                                                            <input required="" class="form-control square" name="mobile" type="number" value="<%= user.mobile %>">
+                                                            <label>Mobile Number <span class="required">*</span></label>
+                                                            <input required="true" class="form-control square" name="mobile" id="mobile" type="number" value="<%= user.mobile %>" oninput="validateMobile()">
+                                                            <span id="errormobile" class="text-danger"></span>
                                                         </div>
                                                         <div class="form-group col-md-12">
                                                             <label>Email Address <span class="required">*</span></label>
-                                                            <input required="" class="form-control square" name="email" type="email" value="<%= user.email %>">
+                                                            <input required="true" class="form-control square" name="email" id="email" type="email" value="<%= user.email %>" oninput="validateEmail()">
+                                                            <span id="erroremail" class="text-danger"></span>
                                                         </div>
                                                         <!-- <div class="form-group col-md-12">
                                                             <label>Current Password <span class="required">*</span></label>
@@ -661,6 +664,9 @@
                                                         </div>
                                                     </div>
                                                 </form>
+                                            <% if(typeof message != "undefined"){ %>
+                                                <div class="text-center text-danger"><%= message %></div>
+                                            <% } %>
                                             <% }else{  %>
                                                 <h4>account not found</h4>
                                                 <% }  %>
@@ -823,6 +829,60 @@
     <script src="/assets/js/plugins/jquery.theia.sticky.js"></script>
     <!-- Template  JS -->
     <script src="/assets/js/main.js"></script>
+    <script>
+        function validateUsername() {
+            var username = document.getElementById("username").value;
+            var errorUsername = document.getElementById("errorusername");
+            errorUsername.innerHTML = "";
+    
+            if (username.trim() === "") {
+                errorUsername.innerHTML = "Username is required";
+            } else if (username.length < 3 || username.length > 20) {
+                errorUsername.innerHTML = "Username must be between 3 and 20 characters";
+            }
+        }
+    
+        function validateEmail() {
+            var email = document.getElementById("email").value;
+            var erroremail = document.getElementById('erroremail');
+            erroremail.innerHTML = "";
+    
+            if(email.trim() === ""){
+                erroremail.innerHTML = "Email is required"
+            }
+        }
+    
+        function validateMobile() {
+            var mobile = document.getElementById('mobile').value;
+            var errormobile = document.getElementById('errormobile');
+            errormobile.innerHTML = "";
+    
+            if(mobile.trim() === ""){
+                errormobile.innerHTML = "mobile is required";
+            }else if(mobile.length !== 10){
+                errormobile.innerHTML = "mobile must be 10 digits"
+            }
+            else{
+                errormobile.innerHTML = ""
+            }
+        }
+    
+        // function validateForm() {
+        //     console.log("validate form called")
+        //     validateEmail();
+        //     validateMobile();
+        //     validateUsername();
+
+
+        //     if (document.querySelectorAll('.text-danger').length > 0) {
+        //         console.log('false passed')
+        //     return false;
+        // }
+        //     console.log('returning true')
+        //     return true;
+
+        // }
+        </script>
 </body>
 
 
