added checkout page with address management

--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -450,7 +450,7 @@
         </div>
     </div>
     <main class="main">
-        <div class="page-header breadcrumb-wrap">
+        <!-- <div class="page-header breadcrumb-wrap">
             <div class="container">
                 <div class="breadcrumb">
                     <a href="index.html" rel="nofollow">Home</a>
@@ -458,8 +458,8 @@
                     <span></span> Account
                 </div>
             </div>
-        </div>
-        <section class="pt-150 pb-150">
+        </div> -->
+        <section class="pt-40    pb-150">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10 m-auto">
