--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -149,8 +149,8 @@
                     <div class="logo logo-width-1 d-block d-lg-none">
                         <a href="index.html"><img src="/assets/imgs/theme/logo.svg" alt="logo"></a>
                     </div>
-                    <div class="header-nav d-none d-lg-flex">
-                        <div class="main-categori-wrap d-none d-lg-block">
+                                       <div class="header-nav d-none d-lg-flex">
+                        <!-- <div class="main-categori-wrap d-none d-lg-block">
                             <a class="categori-button-active" href="#">
                                 <span class="fi-rs-apps"></span> Browse Categories
                             </a>
@@ -330,25 +330,25 @@
                                 </ul>
                                 <div class="more_categories">Show more...</div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="main-menu main-menu-padding-1 main-menu-lh-2 d-none d-lg-block">
                             <nav>
                                 <ul>
-                                    <li><a class="active" href="index.html">Home <i class="fi-rs-angle-down"></i></a>
+                                    <li><a class="active" href="/gadgetly">Home <i class="fi-rs-angle-down"></i></a>
                                         <ul class="sub-menu">
-                                            <li><a href="index.html">Home 1</a></li>
-                                            <li><a href="index-2.html">Home 2</a></li>
+                                            <li><a href="/gadgetly">Home page</a></li>
+                                            <!-- <li><a href="index-2.html">Home 2</a></li>
                                             <li><a href="index-3.html">Home 3</a></li>
-                                            <li><a href="index-4.html">Home 4</a></li>
+                                            <li><a href="index-4.html">Home 4</a></li> -->
                                         </ul>
                                     </li>
                                     <li>
                                         <a href="page-about.html">About</a>
                                     </li>
-                                    <li><a href="shop-grid-right.html">Shop <i class="fi-rs-angle-down"></i></a>
+                                    <li><a href="/gadgetly/shop">Shop <i class="fi-rs-angle-down"></i></a>
                                         <ul class="sub-menu">
-                                            <li><a href="shop-grid-right.html">Shop Grid – Right Sidebar</a></li>
-                                            <li><a href="shop-grid-left.html">Shop Grid – Left Sidebar</a></li>
+                                            <li><a href="/gadgetly/shop">Products</a></li>
+                                            <!-- <li><a href="shop-grid-left.html">Shop Grid – Left Sidebar</a></li>
                                             <li><a href="shop-list-right.html">Shop List – Right Sidebar</a></li>
                                             <li><a href="shop-list-left.html">Shop List – Left Sidebar</a></li>
                                             <li><a href="shop-fullwidth.html">Shop - Wide</a></li>
@@ -363,10 +363,10 @@
                                             <li><a href="shop-wishlist.html">Shop – Wishlist</a></li>
                                             <li><a href="shop-cart.html">Shop – Cart</a></li>
                                             <li><a href="shop-checkout.html">Shop – Checkout</a></li>
-                                            <li><a href="shop-compare.html">Shop – Compare</a></li>
+                                            <li><a href="shop-compare.html">Shop – Compare</a></li> -->
                                         </ul>
                                     </li>
-                                    <li class="position-static"><a href="#">Mega menu <i class="fi-rs-angle-down"></i></a>
+                                    <!-- <li class="position-static"><a href="#">Mega menu <i class="fi-rs-angle-down"></i></a>
                                         <ul class="mega-menu">
                                             <li class="sub-mega-menu sub-mega-menu-width-22">
                                                 <a class="menu-title" href="#">Women's Fashion</a>
@@ -449,9 +449,9 @@
                                             <li><a href="page-terms.html">Terms of Service</a></li>
                                             <li><a href="page-404.html">404 Page</a></li>
                                         </ul>
-                                    </li>
+                                    </li> -->
                                     <li>
-                                        <a href="page-contact.html">Contact</a>
+                                        <a href="/gadgetly/contact">Contact</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -686,7 +686,7 @@
         </div>
     </div>
     <main class="main">
-        <div class="page-header breadcrumb-wrap">
+        <!-- <div class="page-header breadcrumb-wrap">
             <div class="container">
                 <div class="breadcrumb">
                     <a href="index.html" rel="nofollow">Home</a>
@@ -694,8 +694,8 @@
                     <span></span> Your Cart
                 </div>
             </div>
-        </div>
-        <section class="mt-50 mb-50">
+        </div> -->
+        <section class="mt-0 mb-50">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
