--- a/views/user/productdetail.ejs
+++ b/views/user/productdetail.ejs
@@ -286,7 +286,7 @@
                         <a href="index.html"><img src="/assets/imgs/theme/logo.svg" alt="logo"></a>
                     </div>
                     <div class="header-nav d-none d-lg-flex">
-                        <div class="main-categori-wrap d-none d-lg-block">
+                        <!-- <div class="main-categori-wrap d-none d-lg-block">
                             <a class="categori-button-active" href="#">
                                 <span class="fi-rs-apps"></span> Browse Categories
                             </a>
@@ -466,7 +466,7 @@
                                 </ul>
                                 <div class="more_categories">Show more...</div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="main-menu main-menu-padding-1 main-menu-lh-2 d-none d-lg-block">
                             <nav>
                                 <ul>
@@ -483,7 +483,7 @@
                                     </li>
                                     <li><a href="/gadgetly/shop">Shop <i class="fi-rs-angle-down"></i></a>
                                         <ul class="sub-menu">
-                                            <li><a href="/gadgetly/shop">products</a></li>
+                                            <li><a href="/gadgetly/shop">Products</a></li>
                                             <!-- <li><a href="shop-grid-left.html">Shop Grid – Left Sidebar</a></li>
                                             <li><a href="shop-list-right.html">Shop List – Right Sidebar</a></li>
                                             <li><a href="shop-list-left.html">Shop List – Left Sidebar</a></li>
@@ -587,7 +587,7 @@
                                         </ul>
                                     </li> -->
                                     <li>
-                                        <a href="page-contact.html">Contact</a>
+                                        <a href="/gadgetly/contact">Contact</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -822,7 +822,7 @@
         </div>
     </div>
     <main class="main">
-        <div class="page-header breadcrumb-wrap">
+        <!-- <div class="page-header breadcrumb-wrap">
             <div class="container">
                 <div class="breadcrumb">
                     <a href="index.html" rel="nofollow">Home</a>
@@ -830,7 +830,7 @@
                     <span></span> Abstract Print Patchwork Dress
                 </div>
             </div>
-        </div>
+        </div> -->
         <section class="mt-50 mb-50">
             <div class="container">
                 <div class="row">
