--- a/views/admin/categories.ejs
+++ b/views/admin/categories.ejs
@@ -98,6 +98,11 @@
                         <a href="page-error-404.html">Error 404</a> -->
                     </div>
                 </li>
+                <li class="menu-item active">
+                    <a class="menu-link" href="/gadgetly/admin/userorders"> <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">UserOrders</span>
+                    </a>
+                </li>
                 <!-- <li class="menu-item">
                     <a class="menu-link" href="page-reviews.html"> <i class="icon material-icons md-comment"></i>
                         <span class="text">Reviews</span>
